<resources>
    <string name="app_name">testproject1</string>
    <string name="home_everytime">에브리타임</string>
    <string name="home_kau">한국항공대</string>
    <string name="favorite_bulletin">즐겨찾는 게시판</string>
    <string name="favorite_bulletin_more">더 보기 ></string>
    <string name="favorite_bulletin_name">게시판명</string>
    <string name="favorite_bulletin_top_content">최상단 글 제목</string>
    <string name="realtime_favorite">실시간 인기 글</string>
    <string name="sub_title">게시글 제목</string>
    <string name="sub_content">게시글 내용</string>
    <string name="sub_writer">작성자</string>
    <string name="sub_time">작성시간</string>
    <string name="free_bulletin">자유게시판</string>
    <string name="suggest_info">추천 정보</string>
    <string name="popular_sub_bulletin_name">게시판명</string>
    <string name="popular_sub_writer">익명</string>
    <string name="popular_sub_written_date">작성일자</string>
    <string name="kau_home_str">학교<br/>홈</string>
    <string name="login_sub_title">대학 생활을 더 편하고 즐겁게</string>
    <string name="login_title">에브리타임</string>
    <string name="login_id_pw_find">아이디/비밀번호 찾기</string>
    <string name="login_btn">에브리타임 로그인</string>
    <string name="login_sign_up">회원가입</string>
    <string name="login_facebook">페이스북으로 시작하기</string>
    <string name="login_id_save">아이디저장</string>
    <string name="login_auto">자동로그인</string>
</resources>