<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/everytime_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_sub_title"
        app:srcCompat="@drawable/everytime"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sub_title"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/everytime_iv"
        app:layout_constraintBottom_toTopOf="@id/login_id_et"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="20sp"
        android:textColor="@color/dark_red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_sub_title"
        app:layout_constraintBottom_toTopOf="@id/login_id_et"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_id_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="아이디"
        android:inputType="text"
        android:textSize="16sp"
        android:background="@drawable/btn_shape_1"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_end"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintBottom_toTopOf="@id/login_pw_et"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_pw_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="비밀번호"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:background="@drawable/btn_shape_1"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_end"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/login_id_et"
        app:layout_constraintBottom_toTopOf="@id/login_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:text="@string/login_btn"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/login_btn_shape"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_end"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/login_pw_et"
        app:layout_constraintBottom_toTopOf="@id/login_save_id_cb"/>


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/login_save_id_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_id_save"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/login_auto_cb"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintBottom_toTopOf="@id/login_id_pw_tv" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/login_auto_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_auto"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/login_save_id_cb"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_end"
        app:layout_constraintStart_toEndOf="@id/login_save_id_cb"
        app:layout_constraintBottom_toBottomOf="@id/login_save_id_cb"
        tools:layout_editor_absoluteY="400dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_id_pw_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_id_pw_find"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_save_id_cb"
        app:layout_constraintBottom_toTopOf="@id/login_sign_up_tv"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_id_pw_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_facebook_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_facebook"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>